# axcodeblocks

./: Makefile.am  README  acinclude.m4  axcodeblocks.pc.in  axcodeblocks.spec  codeblocks.spec  codeblocks.spec.in  configure.ac  mingw-axcodeblocks.spec
src/base/tinyxml/: Makefile.am
src/build_tools/autorevision/: Makefile.am  autorevision.cpp
src/plugins/: Makefile.am
src/plugins/abbreviations/: Makefile.am
src/plugins/astyle/: Makefile.am
src/plugins/autosave/: Makefile.am
src/plugins/classwizard/: Makefile.am
src/plugins/codecompletion/: Makefile.am  codecompletion.cpp  codecompletion.h
src/plugins/compilergcc/: Makefile.am  compilerIAR.cpp  compilerKeilC51.cpp  compilerKeilC51.h  compilerSDCC.cpp  compilerSDCC.h  compilergcc.cpp  compilergcc.h
src/plugins/compilergcc/depslib/src/: Makefile.am  pathsplit.c
src/plugins/compilergcc/resources/compilers/: compiler_keilc51.xml  options_common_re-iar.xml  options_iar8051.xml  options_keilc51.xml  options_sdcc.xml
src/plugins/contrib/: Makefile.am
src/plugins/contrib/AutoVersioning/: Makefile.am
src/plugins/contrib/BrowseTracker/: Makefile.am
src/plugins/contrib/Cccc/: Makefile.am
src/plugins/contrib/CppCheck/: Makefile.am
src/plugins/contrib/Cscope/: Makefile.am
src/plugins/contrib/DoxyBlocks/: Makefile.am
src/plugins/contrib/EditorConfig/: Makefile.am
src/plugins/contrib/EditorTweaks/: Makefile.am
src/plugins/contrib/FileManager/: Makefile.am
src/plugins/contrib/HexEditor/: Makefile.am  SearchDialog.cpp  SelectStoredExpressionDlg.cpp
src/plugins/contrib/IncrementalSearch/: Makefile.am
src/plugins/contrib/MouseSap/: Makefile.am
src/plugins/contrib/NassiShneiderman/: Makefile.am
src/plugins/contrib/ProjectOptionsManipulator/: Makefile.am
src/plugins/contrib/ReopenEditor/: Makefile.am
src/plugins/contrib/SmartIndent/: Makefile.am
src/plugins/contrib/SpellChecker/: Makefile.am
src/plugins/contrib/SpellChecker/wxspellchecker/: Makefile.am
src/plugins/contrib/ThreadSearch/: Makefile.am
src/plugins/contrib/ToolsPlus/: Makefile.am
src/plugins/contrib/Valgrind/: Makefile.am
src/plugins/contrib/byogames/: Makefile.am
src/plugins/contrib/cb_koders/: Makefile.am
src/plugins/contrib/codesnippets/: Makefile.am
src/plugins/contrib/codesnippets/resources/: Makefile.am
src/plugins/contrib/codestat/: Makefile.am
src/plugins/contrib/copystrings/: Makefile.am
src/plugins/contrib/devpak_plugin/: Makefile.am  mytar.cpp
src/plugins/contrib/dragscroll/: Makefile.am
src/plugins/contrib/envvars/: Makefile.am
src/plugins/contrib/headerfixup/: Makefile.am
src/plugins/contrib/help_plugin/: Makefile.am
src/plugins/contrib/keybinder/: Makefile.am
src/plugins/contrib/lib_finder/: Makefile.am
src/plugins/contrib/profiler/: Makefile.am
src/plugins/contrib/regex_testbed/: Makefile.am
src/plugins/contrib/source_exporter/: Makefile.am
src/plugins/contrib/source_exporter/wxPdfDocument/: Makefile.am
src/plugins/contrib/symtab/: Makefile.am
src/plugins/contrib/wxContribItems/KWIC/: Makefile.am
src/plugins/contrib/wxContribItems/wxFlatNotebook/: Makefile.am
src/plugins/contrib/wxContribItems/wxImagePanel/: Makefile.am
src/plugins/contrib/wxContribItems/wxSpeedButton/: Makefile.am
src/plugins/contrib/wxContribItems/wxTreeList/: Makefile.am
src/plugins/contrib/wxContribItems/wxchart/: Makefile.am
src/plugins/contrib/wxContribItems/wxled/: Makefile.am
src/plugins/contrib/wxContribItems/wxmathplot/: Makefile.am
src/plugins/contrib/wxContribItems/wxthings/: Makefile.am
src/plugins/contrib/wxSmith/: Makefile.am
src/plugins/contrib/wxSmith/plugin/: Makefile.am
src/plugins/contrib/wxSmith/properties/: Makefile.am
src/plugins/contrib/wxSmith/wxwidgets/: Makefile.am  wxwidgetsguiappadoptingdlg.cpp
src/plugins/contrib/wxSmith/wxwidgets/defitems/: Makefile.am
src/plugins/contrib/wxSmithAui/: Makefile.am
src/plugins/contrib/wxSmithContribItems/: Makefile.am
src/plugins/debuggeraxs/: Makefile.am  axs_commands.h  axs_driver.cpp  axs_driver.h  axspipedprocess.cpp  axspipedprocess.h  debugger_defs.cpp  debugger_defs.h  debuggeraxs.cpp  debuggeraxs.h  debuggerdriver.cpp  debuggerdriver.h  debuggeroptionsdlg.cpp  debuggeroptionsdlg.h  debuggeroptionsprjdlg.cpp  debuggeroptionsprjdlg.h  debuggerstate.cpp  debuggerstate.h  editaxsemkeydlg.cpp  editaxsemkeydlg.h  editbreakpointdlg.cpp  editwatchdlg.cpp  editwatchdlg.h  machine.cpp  machine.h  projtargetoptions.cpp  projtargetoptions.h
src/plugins/debuggeraxs/resources/: Makefile.am  breakpoints.xrc  debugger_options_dlg.xrc  debugger_project_options_dlg.xrc  edit_axskey_dlg.xrc  edit_watches_dlg.xrc  manifest.xml
src/plugins/debuggergdb/: Makefile.am  debuggergdb.cpp  debuggergdb.h
src/plugins/defaultmimehandler/: Makefile.am
src/plugins/headerguard/: Makefile.am
src/plugins/loghacker/: Makefile.am
src/plugins/modpoller/: Makefile.am
src/plugins/occurrenceshighlighting/: Makefile.am
src/plugins/openfileslist/: Makefile.am
src/plugins/projectsimporter/: Makefile.am
src/plugins/scriptedwizard/: Makefile.am
src/plugins/scriptedwizard/resources/: Makefile.am  config.script
src/plugins/scriptedwizard/resources/arduino/: Makefile.am
src/plugins/scriptedwizard/resources/axs/: Makefile.am  wizard.script  wizard.xrc
src/plugins/scriptedwizard/resources/mcs51/: wizard.script
src/plugins/tidycmt/: Makefile.am
src/plugins/todo/: Makefile.am
src/plugins/xpmanifest/: Makefile.am
src/sdk/wxpropgrid/: Makefile.am
src/src/: Makefile.am  app.cpp  app.h  appglobals.cpp  appglobals.h  axcodeblocks.1  axs_dbglink.cpp  axs_dbglink.h  axs_pinemdlg.cpp  axs_pinemdlg.h  compilersettingsdlg.cpp  cpuregistersdlg.cpp  cpuregistersdlg.h  debugger_interface_creator.cpp  debugger_interface_creator.h  debuggermenu.cpp  debuggermenu.h  dlgabout.cpp  examinememorydlg.cpp  examinememorydlg.h  watchesdlg.cpp  watchesdlg.h
src/src/resources/: Makefile.am  debugger_menu.xrc  debugger_toolbar.xrc  debugger_toolbar_16x16.xrc  memdump.xrc  resources.rc
src/tools/cb_share_config/: Makefile.am  mainframe.cpp
(+46 files in other folders)
